appId: com.clementgexpo.squadlink
---
- launchApp
- runFlow: auth-flow.yaml
- tapOn: 
    point: "90%,10%"  # Settings button
- assertVisible: "Informations légales"
- tapOn: "Annuler"
- swipe:
    from: "50%,90%"
    to: "50%,10%"
- tapOn: "Profile"
- assertVisible: "Profil"
- runFlow:
    when:
      visible: "Complétez votre profil"
    commands:
      - tapOn: "Prénom"
      - inputText: "John"
      - tapOn: "Nom"
      - inputText: "Doe"
      - tapOn: "Biographie"
      - inputText: "Passionné de sport et de nouvelles rencontres"
      - tapOn: "Enregistrer"
      - assertVisible: "Profil mis à jour avec succès"
